# discord-mk8d-nita-record

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  README.md  WR_UPDATE_FIX.md  biome.json  fly.toml  package-lock.json  package.json  privacy-policy.md  schema.hcl  terms-of-service.md  vite.config.ts  vitest.setup.ts
.github/: dependabot.yml
.github/scripts/: check_machine_state.py
.github/workflows/: ci.yml  deploy.yml  restart-db.yml  test-track-js.yml  test.yml  update-wr.yml
src/: deploy-commands.js  exit-from-personal-server.js  express-app.js  index.js  lib.js  main.js  test-utils.js  types.d.ts
src/const/: color.js  mkwr-track.js  mkwr-track.test.js  track.js  track.test.js
src/controller/: ranking.js
src/event/: interaction-create.js  interactionCreate.js  ready.js
src/infra/repository/: discord-interaction-followup.js  discord-members.js  nita.js  nita.test.js  (+3 more)
src/presenter/: README.md  nita-list-response.js  nita-list-response.test.js  ranking-response.js  ranking-response.test.js  rival-response.js  rival-response.test.js  world-nita-response.js  world-nita-response.test.js
src/slash-command/: back.js  delete.js  nita-list.js  nita-wr.js  nita.js  ping.js  ranking.js  rival.js  stats.js  test-deferred.js  world-nita.js
src/util/: load-commands.js  time.js  time.test.js  validate-slash-command.js
wr-python/: .gitignore  LeaderBoard.py  README.md  data.csv  memo.txt  mise.toml  pyproject.toml  sample.py
wr-python/src/wr_python/: LeaderBoard.py  make_track_js.py
wr-python/src/wr_python/templates/: track.js.template
