[project]
name = "wr-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ren Adachi", email = "49895682+moeyashi@users.noreply.github.com" }
]
dependencies = [
    "Jinja2>=3.1.3",
    "requests>=2.31.0",
    "bs4>=0.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wr_python"]
